Rearranged configuration sections